# d2-ai-assistant

./: .env.example  .gitignore  .python-version  .taskmasterconfig  LICENSE  README.md  TODO.md  bungie_oauth.py  catalyst.py  catalyst_test.py  catalysts.db  create_openai_assistant.py  desktop_app.py  generate_cert.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_desktop.sh  socket_analysis_report.txt  sync_user_data_supabase.py  test_agui_integration.py  test_bungie_oauth.py  test_catalysts.py  test_core.py  test_oauth.py  test_refresh_token.py  test_server.py  test_supabase_crud.py  test_weapon_api.py  toml_to_requirements.py  users_for_supabase_migration.csv
.cursor/: mcp.json
.cursor/rules/: assumption.mdc  browsertools.mdc  naming-conventions.mdc  uv.mdc
archive/: destiny2_science_output.md
common/: README.md
desktop-app/: README.md  app.py  bungie_oauth_test.py  catalyst_db.py  catalyst_hashes.py  desktop_app.py  read_pdf.py  requirements.txt  test_catalyst_api.py
scripts/: create_openai_assistant.py  discover_socket_hashes.py  manage_manifest_schema.py  migrate_sqlite_users_to_supabase.py  prd.txt  sync_manifest_tables.py  sync_user_data.py  test_langsmith.py  test_weapon_roll_extraction.py  update_dim_hashes.py  weapon_api.ipynb
supabase/: config.toml
templates/: index.html
tests/: json_output.json  test_endgame_sheets.py  test_gsheets_api.py  test_reusable_plugs.py  test_weapon_roll_extraction.py  weapon_api.ipynb
web-app/: README.md  setup_dev.sh
web_app/: README.md  __init__.py  generate_cert.py
(+79 files in other folders)
