[project]
name = "destiny2-catalysts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "SQLAlchemy==2.0.30",
    "requests==2.32.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "uvicorn[standard]==0.30.1",
    "fastapi>=0.115.6",
    "pydantic>=2.10,<3.0.0",
    "openai>=1.76.0",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "openai-agents",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "pandas>=2.0.0",
    "openai-agents-mcp>=0.0.8",
    "supabase>=2.15.1",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.18",
]
